[package]
name = "unallocated"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.18.0"

aws-sdk-route53 = "1.14.0"
chrono = "0.4.33"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }

reqwest = "0.11.13" 
serde_json = "1.0.113"
serde = { version = "1", features = ["derive"] }


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
